pootle/static/css/editor.css
/* ... */
body.zoom-out-2 .sidebar
{
    padding-bottom: 0.5em;
}

.sidetitle,
.unit-meta,
.extra-item-meta,
.extra-item-title
{
    color: #999;
    font-size: 85%;
}

.unit-meta
{
    position: absolute;
    right: 0;
    text-align: right;
}

html[dir="rtl"] .unit-meta
{
    right: auto;
    left: 0;
    text-align: left;
}

.extra-item-meta
{
    float: right;
}

html[dir="rtl"] .extra-item-meta
{
    float: left;
}

#tm
{
    position: relative;
}

.tm-unit
{
    margin: 0 0.5em 0.5em 0;
    padding: 0.1em 0.5em;
    border: 1px dotted #999;
    cursor: pointer;
    display: inline-block;
    font-size: 90%;
}

.tm-unit:hover {
    background-color: #fff;
}

.tm-original
{
    font-weight: bolder;
    padding-right: 0.3em;
}

#tm[dir="rtl"] .tm-original
{
    padding-right: auto;
    padding-left: 0.3em;
}

.tm-translation
{
    font-style: oblique;
}

.tm-translation[dir="rtl"]
{
    text-align: right;
}

/* EXTRAS: SUGGESTIONS, TM RESULTS, COMMENTS */

#suggestions,
#timeline-results,
#tm-results,
#translator-comment
{
    clear: both;
    margin-top: 1em;
}

#extras-bar a
{
    cursor: pointer;
    margin-right: 10px;
    font-size: 0.9em;
}

html[dir="rtl"] #extras-bar a
{
    margin-right: 0;
    margin-left: 10px;
}

.extra-item-block
{
    clear: both;
    position: relative;
}

.extra-item-block:last-child
{
    margin-bottom: 0;
}

.suggestion-action img
{
    top: 50%;

    filter:alpha(opacity=10);
    opacity: 0.1;
}

a.suggestion-action,
a.suggestion-vote
{
    float: right;
}

html[dir="rtl"] .suggestion-action,
html[dir="rtl"] .suggestion-vote
{
    float: left;
}

.suggestion-translation-body
{
    unicode-bidi: embed;
}

.extra-item-block:hover .suggestion-action img,
.extra-item-block:hover .suggestion-vote img
{
    filter:alpha(opacity=50);
    opacity: 0.5;
}

.extra-item-block .suggestion-action img:hover,
.extra-item-block .suggestion-vote:hover img
{
    filter:alpha(opacity=100);
    opacity: 1;
}

.num-votes
{
    position: absolute;
    top: 8px;
    right: 0.9em;
    text-shadow: 0 0 8px #777;
}

.suggestion-vote img
{
    top: 50%;

    filter:alpha(opacity=30);
    opacity: 0.3;
}

.extra-item
{
    background-color: #f1f7e4;
    border: 1px dotted #d9d9d9;
    color: #444;
    line-height: 140%;
    padding: 0.5em;
}

.extra-item:hover
{
    background-color: #fff;
}

#translator-comment .extra-item:hover
{
    background-color: #f1f7e4;
}

.suggestion-original
{
    font-weight: bolder;
    color: #130f30;
    padding-right: 1em;
    float: left;
}

#target-item-gravatar a
{
    filter:alpha(opacity=100);
    opacity: 1;
}

.extra-item-gravatar,
#target-item-gravatar
{
    position: absolute;
    margin-top: 4px;
    margin-left: -30px;
}

html[dir="rtl"] .extra-item-gravatar,
html[dir="rtl"] #target-item-gravatar
{
    margin-left: auto;
    margin-right: -30px;
}

.extra-item-tm-content
{
    float: left;
    margin-bottom: -1px;
    width: 100%;
}

.extra-item-tm-user
{
    float: left;
    margin-top: 4px;
    margin-left: -30px;
}

html[dir="rtl"] .extra-item-tm-user
{
    float: right;
    margin-left: auto;
    margin-right: -30px;
}
.extra-item-tm-project
{
    text-align: center;
    font-size: x-small;
    float: right;
    width: 40px;
    margin-top: 4px;
    margin-right: -40px;
}

html[dir="rtl"] .extra-item-tm-project
{
    float: left;
}

.extra-item-content,
#target-item-content
{
    margin-bottom: -1px;
    width: 100%;
}

.extra-item-comment
{
    unicode-bidi: embed;
}

.timeline-extra
{
    position:absolute;
    top: 0;
    left: 100%;
    font-size: 0.9em;
    padding: 2px;
}

html[dir="rtl"] .timeline-extra
{
    left: auto;
    right: 100%;
}

.timeline-field-3
{
    font-size: 85%;
}

.timeline-field-3 .sidetitle
{
    font-size: 100%;
}

.timeline-field-body
{
    unicode-bidi: embed;
}

.timeline-arrow:before
{
    content: "→";
}

html[dir="rtl"] .timeline-arrow:before
{
    content: "←";
}

#editor-comment
{
    margin: 10px 0;
}

/* CHECKS */

ul.checks
{
    display: inline;
    font-size: 85%;
}

div.check a
{
    cursor: help;
}

.checkinfo
{
    vertical-align: top;
    margin-top: 3px;
}

#translate-checks-block
{
    margin: 0 1em;
}

#translate-checks-block .sidetitle
{
    color: #900;
}

li.check
{
    display: inline-block;
    border: 1px dotted #900;
    margin: 0 0.5em 0.5em 0;
    padding: 0.1em 0.1em 0.1em 0.5em;

}

li.check:hover
{
    background-color: #fff;
}

li.check > a
{
    cursor: help;
}

#translate-checks-block i
{
    cursor: pointer;
    vertical-align: middle;
}

/* CONTROLS */

.translate-buttons-block
{
    left: 100%;
    position: absolute;
    margin: 0 10px 0 20px;
}

.translate-buttons-block[dir="rtl"]
{
    left: auto;
    right: 102%;
}

.translate-buttons-block input[type="submit"]
{
    margin-bottom: 0.5em;
}

.unit-submit:disabled,
.unit-submit:disabled:active,
.unit-submit:disabled:hover
{
    opacity: 0.5;
    cursor: default;
}

.buttons input[type="submit"].submit
{
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffee', endColorstr='#aaee77');
    background: -webkit-gradient(linear, left top, left bottom, from(#ffe), to(#ae7));
    background: -webkit-linear-gradient(top,  #ffe,  #ae7);
    background:    -moz-linear-gradient(top,  #ffe,  #ae7);
    background:     -ms-linear-gradient(top,  #ffe,  #ae7);
    background:      -o-linear-gradient(top,  #ffe,  #ae7);
    background:         linear-gradient(top,  #ffe,  #ae7);
}

.translate-buttons-block input.submit:hover {
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#bbff88');
    background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#bf8));
    background: -webkit-linear-gradient(top,  #fff,  #bf8);
    background:    -moz-linear-gradient(top,  #fff,  #bf8);
    background:     -ms-linear-gradient(top,  #fff,  #bf8);
    background:      -o-linear-gradient(top,  #fff,  #bf8);
    background:         linear-gradient(top,  #fff,  #bf8);
}
/* ... */

